
  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

 - Table functions now support value expressions as arguments.

Fixes
=====

 - ``!= ANY()`` could not operate on arrays with more than 1024 elements. This
   limit has been increased by default to 8192. A new node setting:
   ``indices.query.bool.max_clause_count`` has been exposed to allow to
    configure this limit.

 - Added support for conditionals with ``NULL`` arguments.

 - Do not include Lucene indices (metadata) of ``BLOB`` tables in snapshot
   when using ``CREATE SNAPSHOT`` with ``ALL``, because the actual binary
   files of ``BLOB`` tables cannot be backed up using ``SNAPSHOT/RESTORE``
   functionality.

 - Fixed rename table operation for empty partitioned tables.

 - Fixed an issue which caused unrelated table privileges to be lost after a
   table was renamed.

 - Fixed an issue that caused wrong results to be returned for global
   aggregation on ``JOINS`` when literal expression in ``WHERE`` clause is
   evaluated to false. E.g.::

     SELECT COUNT(*) FROM t1, t2 WHERE 1=2

 - Fixed an issue which resulted in an exception when using the same global
   aggregation symbol twice as a select item on a join query.

 - Provide comprehensive error message when using  ``NULL`` literal in
    ``GROUP BY``.

 - Allow ``DISTINCT`` to operate on literals. E.g.::

     SELECT DISTINCT ['val1', 'val2'], col1, col2, ... FROM t

 - Allow ``GROUP BY`` on any literal. E.g.::

     SELECT {a=1, b=2}, COUNT(*) FROM t GROUP BY 1

 - Fixed an issue that can hang the nodes when running an insert from query
   statement for a large dataset when the target table is an empty
   partitioned table.
